endpoints HU2 e HU3 criados
